<?xml version="1.0"?>
<package format="3">
  <name>radar_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and bringup configuration for RADAR.</description>
  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <exec_depend>radar_teleop</exec_depend>
  <exec_depend>radar_camera</exec_depend>
  <exec_depend>radar_pan_tilt</exec_depend>
  <exec_depend>radar_vitals</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
