<?xml version="1.0"?>
<package format="3">
  <name>radar_camera</name>
  <version>0.1.0</version>
  <description>Camera streaming node for RADAR (OpenCV to ROS 2 Image topic)</description>

  <maintainer email="group4@example.com">Group4</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
